2008-11-01  Fate  <fate.tmw@googlemail.com>

	* src/being.cpp (initializeHair): Read hair colours from external
	`hair.xml' file (clientdata)
	(initializeHair): Auto-detect number of hair colours

	* src/gui/skill.cpp (SkillDialog): Display skills using a table
	and using an external `skills.xml' file
	(SkillDialog::update): No longer segfault when skills beyond 199
	are reported

	* src/gui/table_model.cpp: Several fixes to tables and table
	models to better handle `NULL' widgets and `NULL' models during
	initialisation.

	* src/main.cpp (charLogin): Send client protocol version to
	character server (this is ignored in vanilla eAthena).

	* src/net/network.h (TMW_CLIENT_PROTOCOL_VERSION): Record client
	protocol version

	* src/net/beinghandler.cpp (BeingHandler::handleMessage): Properly
	decode whether character is dead
	(BeingHandler::handleMessage): for SMSG_PLAYER_MOVE et al., ignore
	shoe and glove updates-- they are incorrect and not needed (we get
	them correctly when the PC is spawned for the client and they are
	updated as needed by other packages.)

2008-10-31  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/gui/gui.cpp: Applied patch by vargavind which adds more special
	characters to the font. Somehow they were already part of the font
	image, but not used.

2008-10-30  Philipp Sehmisch  <tmw@crushnet.org>

	* src/net/beinghandler.cpp: Added particle effect on critical hits.

2008-10-30  Dennis Friis  <peavey@placid.dk>

	* src/net/beinghandler.cpp: Do not set shoe sprite on player move
	packet unless supported by eAthena.

2008-10-28  Dennis Friis  <peavey@placid.dk>

	* src/net/npchandler.cpp: Handle NPC script close. Fixes client input
	freeze on no-dialog NPCs.

2008-10-28  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/game.cpp: Fixed trade window being visible on client startup
	when it was visible on shutdown.

2008-10-26  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/net/beinghandler.cpp: Since we somehow did end up depending on a